Bug#39845, "Falcon: Concurrent online DROP INDEX causes assertion"